--- a/Example_1_5_1_6/02_click_colored_points.html
+++ b/Example_1_5_1_6/02_click_colored_points.html
@@ -32,9 +32,9 @@
         fragmentShader = null,
         vertexShader = null;
         var vertexPositionAttribute = null,
-        cont = 0,
-        mouseClickPoints = [],
-        mouseClickPointsBuffer = null;
+        cont = 0;
+        var mouseClickPoints = [],
+        mouseClickPoints = null;
         function initWebGL() {
             canvas = document.getElementById("my-canvas");
             try {
@@ -46,7 +46,6 @@
                 setupWebGL();
                 initShaders();
                 registerEventHandler();
-                setupBuffers();
                 click();
             } else {
                 alert("Error: Your browser does not appear to support WebGL.");
@@ -86,35 +85,43 @@
             }
             return shader;
         }
-        function setupBuffers() {
-            mouseClickPointsBuffer = gl.createBuffer();
-            gl.bindBuffer(gl.ARRAY_BUFFER, mouseClickPointsBuffer);
-            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(mouseClickPoints), gl.STATIC_DRAW);
-        }
         function registerEventHandler() {
-            gl.enableVertexAttribArray(vertexPositionAttribute);
-            canvas.onmousedown=function(ev){click(ev,gl,canvas,vertexPositionAttribute, fragColorAttribute);};
+          vertexPositionAttribute = gl.getAttribLocation(glProgram, "aVertexPosition");
+          fragColorAttribute = gl.getAttribLocation(glProgram, "uFrafColor");
+          gl.enableVertexAttribArray(vertexPositionAttribute);
+          canvas.onmousedown=function(ev){click(ev,gl,canvas,vertexPositionAttribute, fragColorAttribute);};
         }
         function click(ev, gl, canvas, vertexPositionAttribute) {
           var x = ev.clientX; // x coordinate of a mouse pointer
           var y = ev.clientY; // y coordinate of a mouse pointer
-          var z = 0.0;
+          var z = 0.0; // z coordinate of a mouse pointer
           cont = cont + 1;
           var rect = ev.target.getBoundingClientRect();
           x = ((x - rect.left) - canvas.height/2)/(canvas.height/2);
           y = (canvas.width/2 - (y - rect.top))/(canvas.width/2);
+          mouseClickPoints.push([x, y, z]);
           // Store the coordinates
-          mouseClickPoints.push(x);
-          mouseClickPoints.push(y);
-          mouseClickPoints.push(z);
+          if (x >= 0.0 && y >= 0.0){ // first quadrant
+              mouseClickPoints.push([1.0, 1.0, 0.0, 1.0]); // yellow
+          } else if (x < 0.0 && y < 0.0) { // third quadrant
+              mouseClickPoints.push([0.0, 1.0, 0.0, 1.0]); // green
+          } else { // others
+              mouseClickPoints.push([1.0, 0.0, 1.0, 1.0]); // purple
+          }
           // Clear <canvas>
           gl.clear(gl.COLOR_BUFFER_BIT);
           // Aquí viene el código para dibujar
-          setupBuffers();
-          vertexPositionAttribute = gl.getAttribLocation(glProgram, "aVertexPosition");
-          gl.bindBuffer(gl.ARRAY_BUFFER, mouseClickPointsBuffer);
-          gl.vertexAttribPointer(vertexPositionAttribute, 3, gl.FLOAT, false, 0, 0);
-          gl.drawArrays(gl.POINTS, 0, cont);
+          var len = mouseClickPoints.length;
+          for (var i = 0; i < len; i++){
+            var xy = mouseClickPoints[i];
+            var rgba = mouseClickColors[i];
+            // Pass the position of a point to aPosition variable:
+            gl.uniform4f(location, )
+            // Pass the color of a point to uFrafColor variable:
+
+            // Draw:
+            gl.drawArrays(gl.POINTS, 0, cont);
+          }
         }
     </script>
 </head>
