--- a/Example_4_1_4_4/Example 4-4.html
+++ b/Example_4_1_4_4/Example 4-4.html
@@ -135,10 +135,15 @@
             gl.bindBuffer(gl.ARRAY_BUFFER, trianglesColorBuffer);
             gl.vertexAttribPointer(vertexColorAttribute, 3, gl.FLOAT, false, 0, 0);
 
-            count += 0.01;
-            drawTriangle1();
-            drawTriangle2();
-	        drawTriangle3();
+            count += 0.02;
+            a = 2.0;
+            b = 1.0;
+
+            for (i=0; i<15; i++){
+                a ++;
+                b += b;
+                drawTriangle1(a,b,i);
+            }
         }
 
 
@@ -146,38 +151,16 @@
             mvMatrixUniform = gl.getUniformLocation(glProgram, "uMVMatrix");
         }
 
-        function drawTriangle1() {
+        function drawTriangle1(a,b,i) {
             /* Render triangle */
-            var posX = Math.cos(count);
-            var posY = Math.sin(count);
-
-            mat4.identity(mvMatrix);
-            mat4.translate(mvMatrix, [posX, posY, 0.0]);
-            gl.uniformMatrix4fv(mvMatrixUniform, false, mvMatrix);
-            gl.drawArrays(gl.TRIANGLES, 0, 3);
-        }
-
-        function drawTriangle2() {
-            /* Render triangle */
-            var posX = Math.cos(count)/2;
-            var posY = Math.sin(count)/2;
+            var posX =  Math.cos(count)/b;
+            var posY = b * Math.sin(count)/a;
 
             mat4.identity(mvMatrix);
             mat4.translate(mvMatrix, [posX, posY, 0.0]);
             mat4.rotate(mvMatrix, count, [0.0, 0.0, 1.0]);
-            gl.uniformMatrix4fv(mvMatrixUniform, false, mvMatrix);
-            gl.drawArrays(gl.TRIANGLES, 0, 3);
-        }
+            mat4.scale(mvMatrix, [posX, posY, 0.0]);
 
-        function drawTriangle3() {
-            /* Render triangle */
-            var posX = Math.cos(count*2)/3;
-            var posY = Math.sin(count*2)/3;
-
-            mat4.identity(mvMatrix);
-            mat4.translate(mvMatrix, [posX, posY, 0.0]);
-            mat4.rotate(mvMatrix, count, [0.0, 0.0, 1.0]);
-            mat4.scale(mvMatrix, [posX, posX, 1.0]);
             gl.uniformMatrix4fv(mvMatrixUniform, false, mvMatrix);
             gl.drawArrays(gl.TRIANGLES, 0, 3);
         }
