--- a/Example_4_1_4_4/Example 4-4.html
+++ b/Example_4_1_4_4/Example 4-4.html
@@ -19,7 +19,7 @@
 
         uniform mat4 uMVMatrix;
         void main(void) {
-             gl_Position = uMVMatrix * vec4(aVertexPosition, 1.0);
+             gl_Position = uMVMatrix * vec4(aVertexPosition, 10.0);
              vColor = vec4(aVertexColor, 1.0);
         }
     </script>
@@ -135,13 +135,14 @@
             gl.bindBuffer(gl.ARRAY_BUFFER, trianglesColorBuffer);
             gl.vertexAttribPointer(vertexColorAttribute, 3, gl.FLOAT, false, 0, 0);
 
-            count += 0.02;
-            a = 2.0;
-            b = 1.0;
 
-            for (i=0; i<15; i++){
-                a ++;
-                b += b;
+            a = 0.8;
+            b = 0.5;
+
+            for (i=0; i<10; i++){
+                count += 0.003;
+                a += 0.02;
+                b += 0.03;
                 drawTriangle1(a,b,i);
             }
         }
@@ -153,13 +154,12 @@
 
         function drawTriangle1(a,b,i) {
             /* Render triangle */
-            var posX =  Math.cos(count)/b;
-            var posY = b * Math.sin(count)/a;
+            var posX = a * Math.cos(count/i);
+            var posY = a * Math.sin(count/a)/b;
 
             mat4.identity(mvMatrix);
             mat4.translate(mvMatrix, [posX, posY, 0.0]);
             mat4.rotate(mvMatrix, count, [0.0, 0.0, 1.0]);
-            mat4.scale(mvMatrix, [posX, posY, 0.0]);
 
             gl.uniformMatrix4fv(mvMatrixUniform, false, mvMatrix);
             gl.drawArrays(gl.TRIANGLES, 0, 3);
