--- a/Example_5_1_5_4/Example 5-3_planetas.html
+++ b/Example_5_1_5_4/Example 5-3_planetas.html
@@ -20,7 +20,7 @@
         uniform mat4 uMVMatrix;
         uniform mat4 uPMatrix;
         void main(void) {
-             gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+             gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 3.0);
 	         vColor = vec4(aVertexColor, 1.0);
         }
     </script>
@@ -194,12 +194,17 @@
             gl.bindBuffer(gl.ARRAY_BUFFER, cubeAttrBuffer);
             gl.vertexAttribPointer(vertexPositionAttribute, 3, gl.FLOAT, false, 4*(3+3), 0);
             gl.vertexAttribPointer(vertexColorAttribute, 3, gl.FLOAT, false, 4*(3+3), 3*4); // a partir del byte 12 tenemos el color.
+            setUniforms();
+            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, cubeElemBuffer);
+            gl.drawElements(gl.TRIANGLES, 6*2*3, gl.UNSIGNED_SHORT, 0);
 
             a = 1.0;
+            b = 3.0;
 
             for (i=0; i<3; i++){
-              setUniforms(a);
-              a += 5.0;
+              setUniforms1(a,b);
+              a += 0.8;
+              b += 1.5;
               gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, cubeElemBuffer);
               gl.drawElements(gl.TRIANGLES, 6*2*3, gl.UNSIGNED_SHORT, 0);
             }
@@ -214,12 +219,22 @@
             gl.uniformMatrix4fv(pMatrixUniform, false, pMatrix);
         }
 
-        function setUniforms(a) {
+        function setUniforms() {
             angle += 0.01;
-            var newPos = (-0.5*a)+2.5;
-	        mat4.identity(mvMatrix);
+            var newPos = (-0.5);
+	          mat4.identity(mvMatrix);
             mat4.translate(mvMatrix, [newPos, 0.0, -6.0]);
             mat4.rotate(mvMatrix, angle, [0.0, 1.0, 0.5]);
+            gl.uniformMatrix4fv(mvMatrixUniform, false, mvMatrix);
+        }
+
+        function setUniforms1(a,b) {
+            angle += 0.01;
+            var newPos = (-0.5*a)+2.5;
+            var newPosX = 5.0*Math.cos(angle);
+            var newPosY = 5.0*Math.sin(angle);
+	        mat4.identity(mvMatrix);
+            mat4.translate(mvMatrix, [newPosX, newPosY, -6.0]);
             gl.uniformMatrix4fv(mvMatrixUniform, false, mvMatrix);
         }
     </script>
