--- a/textured_quad/multi_textured_quad.html
+++ b/textured_quad/multi_textured_quad.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Textured Quad</title>
+    <title>Multi Textured Quad</title>
     <style>
         body {
             background-color: grey;
@@ -24,13 +24,18 @@
     <script id="shader-fs" type="x-shader/x-fragment">
         precision highp float;
         precision mediump float;
-        uniform sampler2D uSampler;
+        uniform sampler2D uSampler0;
+        uniform sampler2D uSampler1;
         varying vec2 vTexCoord;
-        void main(void) {
-            gl_FragColor = texture2D(uSampler, vTexCoord);
+        void main(void) { // tantas texturas como quieras.
+            vec4 color0 = texture2D(uSampler0, vTexCoord);
+            vec4 color1 = texture2D(uSampler1, vTexCoord);
+            gl_FragColor = color0 * color1; // operación: forma de combinar las imaǵenes.
         }
     </script>
     <script>
+        // python -m SimpleHTTPServer
+        // http://localhost:8000/multi_textured_quad.html
         var gl = null,
             canvas = null,
             glProgram = null,
@@ -41,7 +46,10 @@
         var vertexTextureAttribute = null;
         var triangleVerticesTex = [];
         var vertexTextureAttribute = null;
-        var fragmentSamplerUniform = null;
+        var fragmentSamplerUniform0 = null;
+        var fragmentSamplerUniform1 = null;
+        var textureUnit0 = false,
+            textureUnit1 = false;
 
         function initWebGL() {
             canvas = document.getElementById("my-canvas");
@@ -53,7 +61,7 @@
             if (gl) {
                 setupWebGL();
                 initShaders();
-                n=setupBuffers(); // número vértices de la figura.
+                n=setupBuffers();
                 // Set texture
                 if (!initTextures(n)) {
                     console.log('Failed to intialize the texture.');
@@ -123,7 +131,7 @@
 
             vertexPositionAttribute = gl.getAttribLocation(glProgram, "aVertexPosition");
             gl.enableVertexAttribArray(vertexPositionAttribute);
-            gl.vertexAttribPointer(vertexPositionAttribute, 2, gl.FLOAT, false, FSIZE*4, 0); // número total de bytes por elemento (FSIZE), 2 elementos 0 desplazamiento.
+            gl.vertexAttribPointer(vertexPositionAttribute, 2, gl.FLOAT, false, FSIZE*4, 0);
 
             vertexTextureAttribute = gl.getAttribLocation(glProgram, "aTexCoord");
             gl.enableVertexAttribArray(vertexTextureAttribute);
@@ -133,50 +141,70 @@
         }
 
         function initTextures(n) {
-            var texture = gl.createTexture();   // Create a texture object
-            if (!texture) {
-                console.log('Failed to create the texture object');
+            var texture0 = gl.createTexture();   // Create a texture object 0
+            var texture1 = gl.createTexture();   // Create a texture object 1
+
+            if (!texture0 || !texture1) {
+                console.log('Failed to create the textures objects');
                 return false;
             }
 
-            // Get the storage location of uSampler
-            fragmentSamplerUniform = gl.getUniformLocation(glProgram, 'uSampler');
-            if (!fragmentSamplerUniform) {
-                console.log('Failed to get the storage location of uSampler');
+            // Get the storage location of uSampler0
+            fragmentSamplerUniform0 = gl.getUniformLocation(glProgram, 'uSampler0');
+            fragmentSamplerUniform1 = gl.getUniformLocation(glProgram, 'uSampler1');
+            if (!fragmentSamplerUniform0 || !fragmentSamplerUniform1) {
+                console.log('Failed to get the storage location of uSamplers');
                 return false;
             }
-            var image = new Image();  // Create the image object
-            if (!image) {
-                console.log('Failed to create the image object');
+            var image0 = new Image();  // Create the image object 0
+            var image1 = new Image();  // Create the image object 1
+
+            if (!image0 || !image1) {
+                console.log('Failed to create the images objects');
                 return false;
             }
             // Register the event handler to be called on loading an image
-            image.onload = function(){loadTexture(gl, n, texture, fragmentSamplerUniform, image);};
-            // Tell the browser to load an image
-            image.src = 'http://localhost:8000/sky.jpg';
-            image.setAttribute('crossorigin', 'anonymous');
+            image0.onload = function(){loadTexture(gl, n, texture0, fragmentSamplerUniform0, image0, 0);};
+            image1.onload = function(){loadTexture(gl, n, texture1, fragmentSamplerUniform1, image1, 1);};
+
+            // Tell the browser to load the images
+            image0.src = 'http://localhost:8000/sky.jpg';
+            image1.src = 'http://localhost:8000/circle.gif';
+            image0.setAttribute('crossorigin', 'anonymous');
+            image1.setAttribute('crossorigin', 'anonymous');
             return true;
         }
 
-        function loadTexture(gl, n, texture, fragmentSamplerUniform, image) {
-          gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, 1); // Flip the image's y axis
-          // Enable texture unit0
-          gl.activeTexture(gl.TEXTURE0);
-          // Bind the texture object to the target
-          gl.bindTexture(gl.TEXTURE_2D, texture);
+        // Specify whether the texture unit is ready to use
+        function loadTexture(gl, n, texture, fragmentSamplerUniform, image, textureUnitNumber) {
+            gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, 1); // Flip the image's y axis
+            // Make the texture unit active
+            if (textureUnitNumber == 0) {
+                gl.activeTexture(gl.TEXTURE0);
+                textureUnit0 = true;
+            }
+            else{
+                gl.activeTexture(gl.TEXTURE1);
+                textureUnit1 = true;
+            }
 
-          // Set the texture parameters
-          gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
+            // Bind the texture object to the target
+            gl.bindTexture(gl.TEXTURE_2D, texture);
 
-          // Set the texture image
-          gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGB, gl.RGB, gl.UNSIGNED_BYTE, image);
+            // Set the texture parameters
+            gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
 
-          // Set the texture unit 0 to the sampler
-          gl.uniform1i(fragmentSamplerUniform, 0);
+            // Set the texture image
+            gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGB, gl.RGB, gl.UNSIGNED_BYTE, image);
 
-          gl.clear(gl.COLOR_BUFFER_BIT);
+            // Set the texture unit number to the sampler
+            gl.uniform1i(fragmentSamplerUniform, textureUnitNumber);
 
-          gl.drawArrays(gl.TRIANGLE_STRIP, 0, n); // Draw the rectangle
+            gl.clear(gl.COLOR_BUFFER_BIT);
+
+            if (textureUnit0 && textureUnit1) {
+                    gl.drawArrays(gl.TRIANGLE_STRIP, 0, n); // Draw a rectangle
+            }
         }
 
      </script>
