hecha esfera tierra

--- a/textured_quad/multi_textured_cube.html
+++ b/textured_quad/multi_textured_cube.html
@@ -29,15 +29,8 @@
         precision mediump float;
         uniform sampler2D uSampler;
         varying vec2 vTexCoord;
-        uniform sampler2D uSampler0;
-        uniform sampler2D uSampler1;
-
         void main(void) {
             gl_FragColor = texture2D(uSampler, vTexCoord);
-            //vec4 color0 = texture2D(uSampler0, vTexCoord);
-            //vec4 color1 = texture2D(uSampler1, vTexCoord);
-            //gl_FragColor = color0 / color1;
-
         }
     </script>
     <script>
@@ -49,10 +42,7 @@
 
         var vertexPositionAttribute = null,
             vertexTexCoorAttribute = null;
-        var fragmentSamplerUniform0 = null;
-        var  = null;
-        var textureUnit0 = false,
-            textureUnit1 = false;
+        var fragmentSamplerUniform = null;
 
         var cubeAttrBuffer = null,
             cubeElemBuffer = null;
@@ -136,8 +126,8 @@
         function setupBuffers() {
             var cubeAttributes =new Float32Array([
                 // X, Y, Z      Texture Coordinates
-                  -1,-1,-1,     0.0, 0.0,  // 0.1.2
-                   1,-1,-1,     1.0, 1.0,  // 0.2.3
+                  -1,-1,-1,     0.0, 0.0,
+                   1,-1,-1,     1.0, 0.0,
                    1, 1,-1,     1.0, 1.0,
                   -1, 1,-1,     0.0, 1.0,
 
@@ -209,8 +199,6 @@
 
         function initTextures() {
             var texture = gl.createTexture();   // Create a texture object
-            fragmentSamplerUniform0 = gl.getUniformLocation(glProgram, 'uSampler0');
-            fragmentSamplerUniform1 = gl.getUniformLocation(glProgram, 'uSampler1');
             if (!texture) {
                 console.log('Failed to create the texture object');
                 return false;
