--- a/textured_quad/Textured_Sphere.html
+++ b/textured_quad/Textured_Sphere.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Textured Cube</title>
+    <title>Sphere</title>
     <style>
         body {
             background-color: grey;
@@ -29,15 +29,8 @@
         precision mediump float;
         uniform sampler2D uSampler;
         varying vec2 vTexCoord;
-        uniform sampler2D uSampler0;
-        uniform sampler2D uSampler1;
-
         void main(void) {
             gl_FragColor = texture2D(uSampler, vTexCoord);
-            //vec4 color0 = texture2D(uSampler0, vTexCoord);
-            //vec4 color1 = texture2D(uSampler1, vTexCoord);
-            //gl_FragColor = color0 / color1;
-
         }
     </script>
     <script>
@@ -49,13 +42,10 @@
 
         var vertexPositionAttribute = null,
             vertexTexCoorAttribute = null;
-        var fragmentSamplerUniform0 = null;
-        var  = null;
-        var textureUnit0 = false,
-            textureUnit1 = false;
+        var fragmentSamplerUniform = null;
 
-        var cubeAttrBuffer = null,
-            cubeElemBuffer = null;
+        var sphereAttrBuffer = null,
+            sphereElemBuffer = null;
 
 	    var mvMatrix = mat4.create();
         var mvMatrixUniform = null;
@@ -74,7 +64,7 @@
             }
             if (gl) {
                 initShaders();
-                setupBuffers();
+                n = setupBuffers();
                 getUniforms();
                 // Set texture
                 if (!initTextures()) {
@@ -83,7 +73,7 @@
                 }
                 (function animLoop() {
                     setupWebGL();
-                    drawScene();
+                    drawScene(n);
                     requestAnimationFrame(animLoop, canvas);
                 })();
             } else {
@@ -100,6 +90,49 @@
 
 
 	        gl.viewport(0, 0, canvas.width, canvas.height);
+        }
+
+        function initTextures() {
+            var texture = gl.createTexture();   // Create a texture object
+            if (!texture) {
+                console.log('Failed to create the texture object');
+                return false;
+            }
+
+            // Get the storage location of uSampler
+            fragmentSamplerUniform = gl.getUniformLocation(glProgram, 'uSampler');
+            if (!fragmentSamplerUniform) {
+                console.log('Failed to get the storage location of uSampler');
+                return false;
+            }
+            var image = new Image();  // Create the image object
+            if (!image) {
+                console.log('Failed to create the image object');
+                return false;
+            }
+            // Register the event handler to be called on loading an image
+            image.onload = function(){loadTexture(gl, texture, fragmentSamplerUniform, image);};
+            // Tell the browser to load an image
+            image.src = 'http://localhost:8000/Earth-1024x512.jpg';
+            image.setAttribute('crossorigin', 'anonymous');
+            return true;
+        }
+
+        function loadTexture(gl, texture, fragmentSamplerUniform, image) {
+          gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, 1); // Flip the image's y axis
+          // Enable texture unit0
+          gl.activeTexture(gl.TEXTURE0);
+          // Bind the texture object to the target
+          gl.bindTexture(gl.TEXTURE_2D, texture);
+
+          // Set the texture parameters
+          gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
+
+          // Set the texture image
+          gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGB, gl.RGB, gl.UNSIGNED_BYTE, image);
+
+          // Set the texture unit 0 to the sampler
+          gl.uniform1i(fragmentSamplerUniform, 0);
         }
 
         function initShaders() {
@@ -134,129 +167,84 @@
         }
 
         function setupBuffers() {
-            var cubeAttributes =new Float32Array([
-                // X, Y, Z      Texture Coordinates
-                  -1,-1,-1,     0.0, 0.0,  // 0.1.2
-                   1,-1,-1,     1.0, 1.0,  // 0.2.3
-                   1, 1,-1,     1.0, 1.0,
-                  -1, 1,-1,     0.0, 1.0,
+            var SPHERE_DIV = 40;
 
-                  -1,-1, 1,     0.0, 1.0,
-                   1,-1, 1,     0.0, 0.0,
-                   1, 1, 1,     1.0, 1.0,
-                  -1, 1, 1,     1.0, 0.0,
+            var i, ai, si, ci;
+            var j, aj, sj, cj;
+            var p1, p2;
 
-                  -1,-1,-1,     0.0, 1.0,
-                  -1, 1,-1,     0.0, 0.0,
-                  -1, 1, 1,     1.0, 1.0,
-                  -1,-1, 1,     1.0, 0.0,
+            var sphereAttributes = [];
+            // Generate coordinates
+            for (j = 0; j <= SPHERE_DIV; j++) {
+                aj = j * Math.PI / SPHERE_DIV;
+                sj = Math.sin(aj);
+                cj = Math.cos(aj);
+                for (i = 0; i <= SPHERE_DIV; i++) {
+                    ai = i * 2 * Math.PI / SPHERE_DIV;
+                    si = Math.sin(ai);
+                    ci = Math.cos(ai);
 
-                   1,-1,-1,     0.0, 1.0,
-                   1, 1,-1,     0.0, 0.0,
-                   1, 1, 1,     1.0, 1.0,
-                   1,-1, 1,     1.0, 0.0,
+                    sphereAttributes.push(si * sj);  // X
+                    sphereAttributes.push(cj);       // Y
+                    sphereAttributes.push(ci * sj);  // Z
 
-                  -1,-1,-1,     0.0, 1.0,
-                  -1,-1, 1,     0.0, 0.0,
-                   1,-1, 1,     1.0, 1.0,
-                   1,-1,-1,     1.0, 0.0,
+                    sphereAttributes.push(i / SPHERE_DIV); // Color X
+                    sphereAttributes.push(1 - (j / SPHERE_DIV)); // Color Y
 
-                  -1, 1,-1,     0.0, 1.0,
-                  -1, 1, 1,     0.0, 0.0,
-                   1, 1, 1,     1.0, 1.0,
-                   1, 1,-1,     1.0, 0.0,
+                    /*
+                    sphereAttributes.push(0.8);  // Color X
+                    sphereAttributes.push(0.3);       // Color Y
+                    sphereAttributes.push(1.0);  // Color Z
+                    */
 
-            ]);
+                }
+            }
 
-            cubeAttrBuffer = gl.createBuffer();
-            gl.bindBuffer(gl.ARRAY_BUFFER, cubeAttrBuffer);
-            gl.bufferData(gl.ARRAY_BUFFER, cubeAttributes, gl.STATIC_DRAW);
-
-            var FSIZE = cubeAttributes.BYTES_PER_ELEMENT;
+            sphereAttrBuffer = gl.createBuffer();
+            gl.bindBuffer(gl.ARRAY_BUFFER, sphereAttrBuffer);
+            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(sphereAttributes), gl.STATIC_DRAW);
 
             vertexPositionAttribute = gl.getAttribLocation(glProgram, "aVertexPosition");
             gl.enableVertexAttribArray(vertexPositionAttribute);
-            gl.vertexAttribPointer(vertexPositionAttribute, 3, gl.FLOAT, false, FSIZE*5, 0);
 
-            vertexTexCoorAttribute = gl.getAttribLocation(glProgram, "aTexCoord");
-            gl.enableVertexAttribArray(vertexTexCoorAttribute);
-            gl.vertexAttribPointer(vertexTexCoorAttribute, 2, gl.FLOAT, false, FSIZE*4, FSIZE*3);
+            vertexTexCoorAttribute  = gl.getAttribLocation(glProgram, "aTexCoord");
+            gl.enableVertexAttribArray(vertexTexCoorAttribute );
 
-	        var cubeFaces = [
-                   0,1,2,
-                   0,2,3,
+	        var sphereFaces = [];
+            // Generate indices
+            for (j = 0; j < SPHERE_DIV; j++) {
+                for (i = 0; i < SPHERE_DIV; i++) {
+                    p1 = j * (SPHERE_DIV+1) + i;
+                    p2 = p1 + (SPHERE_DIV+1);
 
-                   4,5,6,
-                   4,6,7,
+                    sphereFaces.push(p1);
+                    sphereFaces.push(p2);
+                    sphereFaces.push(p1 + 1);
 
-                   8,9,10,
-                   8,10,11,
-
-                   12,13,14,
-                   12,14,15,
-
-                   16,17,18,
-                   16,18,19,
-
-                   20,21,22,
-                   20,22,23
-
-            ];
-            cubeElemBuffer = gl.createBuffer();
-            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, cubeElemBuffer);
-            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(cubeFaces), gl.STATIC_DRAW);
-        }
-
-        function initTextures() {
-            var texture = gl.createTexture();   // Create a texture object
-            fragmentSamplerUniform0 = gl.getUniformLocation(glProgram, 'uSampler0');
-            fragmentSamplerUniform1 = gl.getUniformLocation(glProgram, 'uSampler1');
-            if (!texture) {
-                console.log('Failed to create the texture object');
-                return false;
+                    sphereFaces.push(p1 + 1);
+                    sphereFaces.push(p2);
+                    sphereFaces.push(p2 + 1);
+                }
             }
 
-            // Get the storage location of uSampler
-            fragmentSamplerUniform = gl.getUniformLocation(glProgram, 'uSampler');
-            if (!fragmentSamplerUniform) {
-                console.log('Failed to get the storage location of uSampler');
-                return false;
-            }
-            var image = new Image();  // Create the image object
-            if (!image) {
-                console.log('Failed to create the image object');
-                return false;
-            }
-            // Register the event handler to be called on loading an image
-            image.onload = function(){loadTexture(gl, texture, fragmentSamplerUniform, image);};
-            // Tell the browser to load an image
-            image.src = 'http://localhost:8000/brick001.jpg';
-            image.setAttribute('crossorigin', 'anonymous');
-            return true;
-        }
+            sphereElemBuffer = gl.createBuffer();
+            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, sphereElemBuffer);
+            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(sphereFaces), gl.STATIC_DRAW);
 
-        function loadTexture(gl, texture, fragmentSamplerUniform, image) {
-          gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, 1); // Flip the image's y axis
-          // Enable texture unit0
-          gl.activeTexture(gl.TEXTURE0);
-          // Bind the texture object to the target
-          gl.bindTexture(gl.TEXTURE_2D, texture);
+            return sphereFaces.length; // número de índices a dibujar.
 
-          // Set the texture parameters
-          gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-
-          // Set the texture image
-          gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGB, gl.RGB, gl.UNSIGNED_BYTE, image);
-
-          // Set the texture unit 0 to the sampler
-          gl.uniform1i(fragmentSamplerUniform, 0);
         }
 
         function drawScene(n) {
             gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
+            gl.bindBuffer(gl.ARRAY_BUFFER, sphereAttrBuffer);
+            gl.vertexAttribPointer(vertexPositionAttribute, 3, gl.FLOAT, false, 4*(3+2), 0);
+            gl.vertexAttribPointer(vertexTexCoorAttribute , 2, gl.FLOAT, false, 4*(3+2), 3*4);
+
             setUniforms();
-            gl.drawElements(gl.TRIANGLES, 6*2*3, gl.UNSIGNED_SHORT, 0);
+            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, sphereElemBuffer);
+            gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_SHORT, 0);
         }
 
         function getUniforms() {
@@ -264,12 +252,13 @@
 
             pMatrixUniform = gl.getUniformLocation(glProgram, "uPMatrix");
             var ratio = canvas.width/canvas.height;
-            mat4.perspective(60, ratio, 0.1, 100, pMatrix);
+            mat4.perspective(30, ratio, 0.1, 100, pMatrix);
             gl.uniformMatrix4fv(pMatrixUniform, false, pMatrix);
         }
 
         function setUniforms() {
             angle += 0.01;
+
 	        mat4.identity(mvMatrix);
             mat4.translate(mvMatrix, [0.0, 0.0, -6.0]);
             mat4.rotate(mvMatrix, angle, [0.0, 1.0, 0.5]);
